src/nohup.out
 * Serving Flask app 'main'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://169.254.0.21:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 173-304-526
 * Detected change in '/home/ubuntu/faculty_housing_platform/housing_system/src/main.py', reloading
 * Restarting with stat
  File "/home/ubuntu/faculty_housing_platform/housing_system/src/main.py", line 158
    @app.route('/a@app.route('/api/users/<int:user_id>', methods=['DELETE'])
                                                                         ^
SyntaxError: unterminated string literal (detected at line 158)
